int/ks-devops-ext-tekton-common/gateway.yaml
apiVersion: gateway.kubesphere.io/v1alpha1
kind: Gateway
metadata:
  name: kubesphere-router-ks-devops-ext
  namespace: kubesphere-controls-system
spec:
  controller:
    replicas: 1
    scope:
      enabled: true
      namespace: ks-devops-ext
  deployment:
    annotations:
      servicemesh.kubesphere.io/enabled: "false"
    replicas: 1
  service:
    type: NodePort
