int/ks-devops-ext-tekton-common/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: el-trigger-listener-ingress
  namespace: ks-devops-ext
spec:
  rules:
    - host: el-trigger-listener.ks-devops-ext.103.61.38.146.nip.io
      http:
        paths:
          - path: /hook
            pathType: ImplementationSpecific
            backend:
              service:
                name: el-trigger-listener
                port:
                  number: 8080
